New tools New Utils New new

--- a/test/index.html
+++ b/test/index.html
@@ -8,40 +8,69 @@
 <body>
 <main>
     <nav class="navbar bgc-primary bgc-lg-dark text-white">
-        <ul class="nav container">
+        <ul class="nav container-fw">
             <li class="nav-item">
                 <a href="#" class="nav-link">Home</a>
             </li>
-<!--            <li class="nav-item">-->
-<!--                <a href="#" class="nav-link">Pagina</a>-->
-<!--            </li>-->
-<!--            <li class="nav-item disabled">-->
-<!--                <a href="" class="nav-link">Disabled Link</a>-->
-<!--            </li>-->
-<!--            <li class="nav-item disabled">-->
-<!--                Disabled Item-->
-<!--            </li>-->
+            <li class="nav-item">
+                <a href="#" class="nav-link">Pagina</a>
+            </li>
+            <li class="nav-item disabled">
+                <a href="" class="nav-link">Disabled Link</a>
+            </li>
         </ul>
     </nav>
     <section id="text">
         <div class="container-fw">
             <h1>Headings</h1>
-            <div class="d-block d-sm-flex flex-jc-between flex-ai-end w-md-50">
-                <h1>H1</h1>
-                <h2>H2</h2>
-                <h3>H3</h3>
-                <h4>H4</h4>
-                <h5>H5</h5>
-                <h6>H6</h6>
+            <div class="d-block d-sm-flex flex-jc-between flex-ai-center w-md-75 w-xl-50">
+                <h1>H1 Size</h1>
+                <h2>H2 Size</h2>
+                <h3>H3 Size</h3>
+                <h4>H4 Size</h4>
+                <h5>H5 Size</h5>
+                <h6>H6 Size</h6>
             </div>
+            <h1>Paragraphs</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, facere vero. A aperiam blanditiis dicta dolorum, ea eos ex minima nemo neque nostrum, obcaecati quasi qui quis rerum sequi? Iure!</p>
+            <a href="#">A Element</a>
         </div>
     </section>
 
     <section id="spacing">
-        <h4 class="container">Container</h4>
-        <div class="container bgc-black w-100" style="height: 10px"></div>
-        <h4 class="container-fw">Container-fw</h4>
-        <div class="container-fw bgc-black w-100" style="height: 10px"></div>
+        <div class="my-4 container">
+            <h4>Container</h4>
+            <div class="bgc-black w-100 py-1"></div>
+            <h3>Content van container</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi debitis, dolore eaque eos est, harum impedit inventore iure, iusto laboriosam modi praesentium reiciendis repellat sapiente sed sint tenetur totam.</p>
+
+        </div>
+        <div class="my-4 container-fw">
+            <h4>Container-fw</h4>
+            <div class="bgc-black w-100 py-1"></div>
+            <h3>Content van container-fw</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi debitis, dolore eaque eos est, harum impedit inventore iure, iusto laboriosam modi praesentium reiciendis repellat sapiente sed sint tenetur totam.</p>
+        </div>
+        <div class="blokken container-fw">
+            <div class="bgc-dark" style="height: 40px; width: 40px">
+            </div>
+            <div class="bgc-light mt-1 mt-md-5" style="height: 40px; width: 40px">
+            </div>
+        </div>
+    </section>
+
+    <section id="buttons">
+        <div class="container-fw mt-5">
+            <h1>Buttons</h1>
+            <div class="d-flex">
+                <a class="btn btn-primary">Primary</a>
+                <a class="btn btn-secondary">Secondary</a>
+                <a class="btn btn-light">Light</a>
+                <a class="btn btn-dark">Dark</a>
+                <a class="btn btn-gray">Gray</a>
+            </div>
+        </div>
+
     </section>
 </main>
 <footer>
