Formatting and first card support

--- a/test/index.html
+++ b/test/index.html
@@ -36,6 +36,14 @@
             <a href="#">A Element</a>
         </div>
     </section>
+    <section id="card">
+        <div class="card">
+            <h3 class="card-header">Card Header</h3>
+            <div class="card-body">
+                <p>test</p>
+            </div>
+        </div>
+    </section>
 
     <section id="spacing">
         <div class="my-4 container">
