update border flex

--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,7 @@
     <section id="text">
         <div class="container-fw">
             <h1>Headings</h1>
-            <div class="d-block d-sm-flex flex-jc-between flex-ai-center w-md-75 w-xl-50">
+            <div class="d-block d-sm-flex flex-jc-between flex-ai-center w-md-75 w-xl-50 border-all border-y-0 px-3">
                 <h1>H1 Size</h1>
                 <h2>H2 Size</h2>
                 <h3>H3 Size</h3>
