--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,39 @@
             </li>
         </ul>
     </nav>
+    <section>
+        <div class="container-fw">
+            <h1>Row</h1>
+            <div class="row">
+                <div class="col-md-1">
+                    <div class="bgc-primary bgc-lg-dark text-white">
+                        <p>1 breedt md</p>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="bgc-primary bgc-lg-dark text-white">
+                        <p>2 breedt md</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="bgc-primary bgc-lg-dark text-white">
+                        <p>3 breedt md</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="bgc-primary bgc-lg-dark text-white">
+                        <p>4 breedt md</p>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <div class="bgc-primary bgc-lg-dark text-white">
+                        <p>5 breedt md</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
     <section id="text">
         <div class="container-fw">
             <h1>Headings</h1>
@@ -76,6 +109,13 @@
                 <a class="btn btn-light">Light</a>
                 <a class="btn btn-dark">Dark</a>
                 <a class="btn btn-gray">Gray</a>
+                <a class="btn btn-green">Groen</a>
+                <a class="btn btn-blue">Blue</a>
+                <a class="btn btn-red">Red</a>
+                <a class="btn btn-yellow">Yellow</a>
+                <a class="btn btn-orange">Orange</a>
+                <a class="btn btn-purple">Purple</a>
+                <a class="btn btn-teal">Teal</a>
             </div>
         </div>
 
