--- a/test/index.html
+++ b/test/index.html
@@ -50,6 +50,25 @@
                     </div>
                 </div>
             </div>
+            <h1>row 3x 4 = 12</h1>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="bgc-primary bgc-lg-dark text-white">
+                        <p>4 breedt md</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="bgc-primary bgc-lg-dark text-white">
+                        <p>4 breedt md</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="bgc-primary bgc-lg-dark text-white">
+                        <p>4 breedt md</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
     </section>
