--- a/test/index.html
+++ b/test/index.html
@@ -121,7 +121,7 @@
 
     <section id="buttons">
         <div class="container-fw mt-5">
-            <h1>Buttons</h1>
+            <h1>Buttons and labels</h1>
             <div class="d-flex">
                 <a class="btn btn-primary">Primary</a>
                 <a class="btn btn-secondary">Secondary</a>
@@ -136,12 +136,48 @@
                 <a class="btn btn-purple">Purple</a>
                 <a class="btn btn-teal">Teal</a>
             </div>
+
+            <div class="d-flex">
+                <div class="label label-primary">
+                    Primary
+                </div>
+                <div class="label label-secondary">
+                    Secondary
+                </div>
+                <div class="label label-light">
+                    Light
+                </div>
+                <div class="label label-dark">
+                    Dark
+                </div>
+                <div class="label label-gray">
+                    Gray
+                </div>
+                <div class="label label-green">
+                    Green
+                </div>
+                <div class="label label-blue">
+                    Blue
+                    </div>
+                <div class="label label-red">
+                    Red
+                </div>
+                <div class="label label-yellow">
+                    Yellow
+                </div>
+                <div class="label label-orange">
+                    Orange
+                </div>
+                <div class="label label-purple">
+                    Purple
+                </div>
+            </div>
         </div>
 
     </section>
 </main>
 <footer>
-
+<div class="mb-5"></div>
 </footer>
 
 </body>
